[stop-gap] First steps towards a reworked interface ...
This is a stop-gap commit and so should not be seen as one that
resolves an issue

The old interface was just wrong !! The focus should be on what
actions/tasks the user - in a given role - would like to perform -
and not on presenting information stored in the DB

And so, I am working towards the following design

1. A top-level horizontal control panel with :
  a. main-links for DB models of most likely to be of interest to the user
  b. minor-links for performing actions on individual records

2. Provision for max 3 equi-width panels below the control panel.
  a. A side-panel (always present) that lists all the records - one per row - for
     the model selected from the control panel. Each row in the panel
	 is just a radio-button with some stored 'name' for the record.
	 Clicking on a radio-button here populates panel(s) to the right
	 with forms or tables representing the most obvious first thing a user would
	 want to do with an individual record

  b. (optional) 2 equi-width panels - called middle & right-panel. These can be
     populated with either forms or other lists

  c. (optional) a single panel taking the space of two slimmer panels. Used when
     the data to be presented is too wide to fit into one slim panel

And that's all I have to say about that - Forrest Gump

--- a/webapp/app/assets/stylesheets/application.css
+++ b/webapp/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*
 *= require formtastic 
+*= require new-interface
 *= require tweaks 
 *= require formtastic_changes 
 *= require jquery-custom-theme/styling 
