--- a/webapp/app/views/schools/_new.html.haml
+++ b/webapp/app/views/schools/_new.html.haml
@@ -1,5 +1,5 @@
 
-#new-school.new-entity.close-on-submit
+#new-school.clear-after-submit
   = semantic_form_for :school, :remote => true do |f| 
     = f.inputs do 
       = f.input :name 
