--- a/webapp/app/views/schools/_controls.html.haml
+++ b/webapp/app/views/schools/_controls.html.haml
@@ -1,5 +1,5 @@
 
-#school-controls.left.top-panel-controls
+#school-controls.top-panel-controls
   %a#add-school-link.sub-link.left{ :href => '#' }= "Add"
   %a#edit-school-link.sub-link.left{ :href => '#' }= "Edit"
   %a#view-teachers-link.sub-link.left{ :href => '#' }= "Teachers"
