Added a new class attribute - empty-on-putback ..
Apply this attribute on any DOM element that needs to be
emptied before being put back into the "toolbox"

Previously, this action was performed on '.data' w/ the
added restriction that only the first .data would be emptied. This
is unnecessarily restrictive. Moreover, .data is not a good choice
of attribute name for elements that need to be emptied

Associated changes in JS to follow

--- a/webapp/app/views/boards/_list.html.haml
+++ b/webapp/app/views/boards/_list.html.haml
@@ -17,4 +17,4 @@
           - { :course => :wide, :subject => :regular, 
               :grade => :narrow }.each do |title, class_attr| 
             .cell{ :class => "#{class_attr.to_s}" }= "#{title.to_s.humanize}"
-      .data
+      .data.empty-on-putback
