--- a/webapp/app/views/courses/_summary.html.haml
+++ b/webapp/app/views/courses/_summary.html.haml
@@ -10,5 +10,5 @@
             .cell{ :class => "#{width.to_s}" }= "#{title.to_s.humanize}"
           - else 
             .cell{ :class => "#{width.to_s}" }= " "
-    .data 
+    .data.empty-on-putback 
 
