Added an additional class attribute 'clear-before-show' to .data
This attribute should be applied to <div> below which search results are shown.
With each new search, the old results need to be cleared

Typically, applied to elements in the #side-panel

--- a/webapp/app/views/courses/_summary.html.haml
+++ b/webapp/app/views/courses/_summary.html.haml
@@ -1,14 +1,3 @@
 
-- columns = {:notitle => :radio, :course => :wide, :board => :narrow, :class => :narrow, :difficulty => :narrow}
-
-#courses-summary.summary-table.left
-  .table 
-    .headings 
-      .row 
-        - columns.each do |title, width| 
-          - if title != :notitle 
-            .cell{ :class => "#{width.to_s}" }= "#{title.to_s.humanize}"
-          - else 
-            .cell{ :class => "#{width.to_s}" }= " "
-    .data.empty-on-putback 
-
+#courses-summary.selection.full-width.left{'wide-panel' => '#edit-syllabi-megaform'}
+  .data.clear-before-show.empty-on-putback 
