--- a/webapp/app/views/schools/_admin-view.html.haml
+++ b/webapp/app/views/schools/_admin-view.html.haml
@@ -1,5 +1,4 @@
 
--#schools-summary.selection.full-width.left{'wide-panel' => '#new-student'}
 #schools-summary.selection.full-width.left{'middle-panel' => '#new-student', 'right-panel' => '#new-teacher'}
-  .data.empty-on-putback 
+  .data.clear-before-show.empty-on-putback 
 
