Added support in the new interface for listing & editing Yardsticks ..

--- a/webapp/app/views/yardsticks/_edit.html.haml
+++ b/webapp/app/views/yardsticks/_edit.html.haml
@@ -1,5 +1,5 @@
 
-#edit-yardstick.update-entity.close-on-submit
+#edit-yardstick
   = semantic_form_for :yardstick, :remote => true do |f| 
     = f.inputs do 
       = f.input :annotation, :input_html => {:marker => :annotation} 
