--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -23,7 +23,7 @@
     = render :partial => 'courses/summary'
     = render :partial => 'courses/syllabus'
     = render :partial => 'syllabi/edit'
-    = render :partial => 'yardsticks/simedit'
+    = render :partial => 'yardsticks/summary'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
