--- a/webapp/app/views/yardsticks/_edit.html.haml
+++ b/webapp/app/views/yardsticks/_edit.html.haml
@@ -3,7 +3,7 @@
   = semantic_form_for :yardstick, :remote => true do |f| 
     = f.inputs do 
       = f.input :annotation, :input_html => {:marker => :annotation} 
-      = f.input :description, :input_html => {:marker => :description} 
+      = f.input :description, :as => :text, :input_html => {:rows => 7, :marker => :description} 
       = f.input :mcq, :label => "MCQ ?", :as => :boolean ,:input_html => {:marker => :mcq} 
       = f.input :subpart, :label => "About a subpart ?", :as => :boolean ,:input_html => {:marker => :subpart} 
       = f.input :active, :label => "Active ?", :as => :boolean ,:input_html => {:marker => :active} 
