In #yardsticks-summary, colouring each row depending on yardstick type ..
So, if the yardstick applies only to sub-parts, it gets one colour.
And if it applies to a 'sub-part', then it is light orange

--- a/webapp/app/assets/stylesheets/new-interface.css
+++ b/webapp/app/assets/stylesheets/new-interface.css
@@ -145,3 +145,22 @@ legend > span.operation {
   font-size : 11px ;
   color : #654b24 ;
 } 
+
+.colored, .light-orange, .light-green { 
+  color : white ; 
+  -moz-border-radius : 10px ; 
+  border-radius : 10px ;
+  font-weight : bold ;
+} 
+
+.colored { 
+  background-color : #6ca7ab  ;
+} 
+
+.light-orange {
+  background-color : #f69518 ;
+} 
+
+.light-green {
+  background-color : #72ab65 ;
+} 
