Added a legend to yardstick edit form

--- a/webapp/app/views/yardsticks/_edit.html.haml
+++ b/webapp/app/views/yardsticks/_edit.html.haml
@@ -1,5 +1,8 @@
 
-#edit-yardstick
+#edit-yardstick.clear-after-submit
+  %legend
+    %span.target= "Yardstick"
+    %span.operation= "Quick Edit"
   = semantic_form_for :yardstick, :remote => true do |f| 
     = f.inputs do 
       = f.input :annotation, :input_html => {:marker => :annotation} 
