Styled boolean inputs in formtastic forms
They should line up in one row and their labels should be lowercase

--- a/webapp/app/assets/stylesheets/new-interface.css
+++ b/webapp/app/assets/stylesheets/new-interface.css
@@ -8,6 +8,12 @@ body {
   padding : 20px ;
 } 
 
+fieldset.inputs li.boolean.input { 
+  font-size : 12px ;
+  text-transform : lowercase ;
+  float : left ;
+} 
+
 .slim { 
   width : 32.3% ; 
   padding-left : 5px ;
