Misc. changes to view files that I am too lazy to explain on a case-by-case basis

--- a/webapp/app/views/admin/_top-panel.html.haml
+++ b/webapp/app/views/admin/_top-panel.html.haml
@@ -2,5 +2,6 @@
 %ul.no-bullets
   = top_panel_link :schools  
   = top_panel_link :courses 
+  = top_panel_link :yardsticks 
   = top_panel_link :logout, :href => "/logout", :dynamic => false
 
