--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -1,9 +1,8 @@
 
-#course-controls.left.top-panel-controls
-  %a#add-course-link.sub-link= "Add"
-  %a#edit-course-link.sub-link= "Edit"
-  %a#edit-syllabus-link.sub-link= "Syllabus"
-  %a#add-topic-link.sub-link= "New Topic"
+#course-controls.top-panel-controls
+  %a#add-course-link.sub-link.left= "New Course"
+  %a#edit-course-link.sub-link.left= "Edit Selected"
+  %a#add-topic-link.sub-link.left= "New Topic"
   = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
