--- a/webapp/app/views/yardsticks/_controls.html.haml
+++ b/webapp/app/views/yardsticks/_controls.html.haml
@@ -1,3 +1,3 @@
 
-#yardstick-controls.left.top-panel-controls
-  %a#edit-yardstick-link.sub-link.left{ :href => '#' }= "Edit"
+#yardstick-controls.top-panel-controls
+  %a#add-yardstick-link.sub-link.left{ :href => '#' }= "New Yardstick"
