Form for adding a new yardstick placed in the #right-panel

--- a/webapp/app/views/yardsticks/_summary.html.haml
+++ b/webapp/app/views/yardsticks/_summary.html.haml
@@ -1,4 +1,5 @@
 
-#yardsticks-summary.selection.full-width.left{'middle-panel' => '#edit-yardstick'}
+#yardsticks-summary.selection.full-width.left{'middle-panel' => '#edit-yardstick',
+                                              'right-panel' => '#new-yardstick'}
   .data.clear-before-show.empty-on-putback 
 
