'create' action returns json on successful completion ..
.. and not just HTTP status = 200.

For some reason, respond_with @object is captured by ajaxSuccess but
head :ok is not - even if the submitted form has data-remote = true

That is why the action needed to modified and that is why create.json.rabl
needed to be created

--- a/webapp/app/views/yardsticks/_new.html.haml
+++ b/webapp/app/views/yardsticks/_new.html.haml
@@ -1,6 +1,6 @@
 
 - new_yardstick = Yardstick.new 
-#new-yardstick
+#new-yardstick.clear-after-submit
   %legend
     %span.target= "Yardstick"
     %span.operation= "Quick Add"
