--- a/webapp/app/views/yardsticks/_summary.html.haml
+++ b/webapp/app/views/yardsticks/_summary.html.haml
@@ -1,5 +1,5 @@
 
-#yardsticks-summary.selection.full-width.left{'middle-panel' => '#edit-yardstick',
-                                              'right-panel' => '#new-yardstick'}
+#yardsticks-summary.selection.full-width.left{ :middle => '#edit-yardstick',
+                                               :right => '#new-yardstick'}
   .data.clear-before-show.empty-on-putback 
 
