--- a/webapp/app/views/admin/_top-panel.html.haml
+++ b/webapp/app/views/admin/_top-panel.html.haml
@@ -1,7 +1,7 @@
 
 %ul.no-bullets
-  = top_panel_link :schools  
-  = top_panel_link :courses 
-  = top_panel_link :yardsticks 
-  = top_panel_link :logout, :href => "/logout", :dynamic => false
+  = main_link :for => :schools  
+  = main_link :for => :courses 
+  = main_link :for => :yardsticks 
+  = main_link :for => :logout, :href => "/logout", :dynamic => false
 
