[Admin] Support for creating study-groups added ...
Creation of study-groups is optimized for mass-creation - that is -
multiple sections for multiple classes. Creating single study groups
would require choosing the same class and same section for both the
:from and the :to fields (for both classes & sections)

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -11,6 +11,7 @@
     = render :partial => 'specific_topics/new'
     = render :partial => 'teachers/new'
     = render :partial => 'students/new'
+    = render :partial => 'study_groups/new'
 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
