--- a/webapp/app/views/schools/_admin-view.html.haml
+++ b/webapp/app/views/schools/_admin-view.html.haml
@@ -1,4 +1,4 @@
 
-#schools-summary.selection.full-width.left{ :middle => '#new-student', :right => '#new-teacher'}
+#schools-summary.selection.full-width.left{ :middle => '#new-studygroups', :right => '#new-teacher'}
   .data.clear-before-show.empty-on-putback 
 
