No need for a Trojan horse in #new-teacher form ...
Simply change the action attribute - as one does always

Hope this does not signal the end of the Trojan horse concept.
I kinda like it

--- a/webapp/app/views/teachers/_new.html.haml
+++ b/webapp/app/views/teachers/_new.html.haml
@@ -3,9 +3,8 @@
   %legend
     %span.target= "Teacher"
     %span.operation= "Quick Add"
-  = semantic_form_for :teacher, :remote => true, :url => teacher_path do |f| 
+  = semantic_form_for :teacher, :remote => true do |f|
     = f.inputs :name => :mandatory do 
-      = trojan_horse_for :teacher
       = f.input :first_name, :label => 'First Name'
       = f.input :last_name, :label => 'Surname'
 
