--- a/webapp/app/views/schools/_controls.html.haml
+++ b/webapp/app/views/schools/_controls.html.haml
@@ -1,8 +1,11 @@
 
 #school-controls.top-panel-controls
-  %a#add-school-link.sub-link.left{ :href => '#' }= "Add"
-  %a#edit-school-link.sub-link.left{ :href => '#' }= "Edit"
-  %a#view-teachers-link.sub-link.left{ :href => '#' }= "Teachers"
+  %ul.no-bullets
+    = minor_link :for => 'add-school', :label => 'Add'
+    = minor_link :for => 'edit-school', :label => 'Edit'
+    = minor_link :for => 'edit-roster', :label => 'Faculty Roster', 
+                 :with => { :panels => { :middle => '#teachers-list', :right => '#sections-list'} }
+    = minor_link :for => 'edit-studygroups', :label => 'Class & Section'
   = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :states
     = submit_tag 'Search'
