As far as possible, stick w/ DOM IDs drawn from model names

--- a/webapp/app/views/schools/_controls.html.haml
+++ b/webapp/app/views/schools/_controls.html.haml
@@ -4,7 +4,7 @@
     = minor_link :for => 'add-school', :label => 'Add'
     = minor_link :for => 'edit-school', :label => 'Edit'
     = minor_link :for => 'edit-roster', :label => 'Faculty Roster', 
-                 :with => { :panels => { :middle => '#teachers-list', :right => '#sections-list'} }
+                 :with => { :panels => { :middle => '#teachers-list', :right => '#studygroups-list'} }
     = minor_link :for => 'edit-studygroups', :label => 'Class & Section'
   = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :states
