--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -24,6 +24,8 @@
     = render :partial => 'courses/syllabus'
     = render :partial => 'syllabi/edit'
     = render :partial => 'yardsticks/summary'
+    = render :partial => 'teachers/list'
+    = render :partial => 'study_groups/list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
