--- a/webapp/app/views/toolbox/_checkbox_one_column.html.haml
+++ b/webapp/app/views/toolbox/_checkbox_one_column.html.haml
@@ -1,5 +1,5 @@
 
 .toolbox.checkbox-column.full-width
-  %input{ :type => :checkbox, :class => :checkbox} 
-  .content.left
+  %input.left{ :type => :checkbox, :class => :checkbox} 
+  .content
 
