Committing for later removal ..
Not sure I need these files. There is little point seeing
the list of school-boards

--- a/webapp/app/views/boards/_summary.html.haml
+++ b/webapp/app/views/boards/_summary.html.haml
@@ -8,5 +8,5 @@
       .row 
         - columns.each do |title, width| 
           .cell{ :class => "#{width.to_s}" }= "#{title.to_s.humanize}"
-    .data.empty-on-putback 
+    .data.clear-before-show.empty-on-putback 
 
