--- a/webapp/app/views/boards/_list.html.haml
+++ b/webapp/app/views/boards/_list.html.haml
@@ -17,4 +17,4 @@
           - { :course => :wide, :subject => :regular, 
               :grade => :narrow }.each do |title, class_attr| 
             .cell{ :class => "#{class_attr.to_s}" }= "#{title.to_s.humanize}"
-      .data.empty-on-putback
+      .data.clear-before-show.empty-on-putback
