Massively Imp : Defined 10 possible yardsticks as per new scheme ..
The old yardstick scale was still not defined sharply enough. A little
more thought, and we realized that every student response will have the following
3 characteristics :
  1. whether or not it captures all the required critical insights
  2. whether those insights have been formulated into equations
  3. whether those formulations have been 'calculated' to arrive at an answer

Each of these characteristics can be either absent, partially present or
fully present in a response.

The above scheme leads to 10 well-defined yardsticks (no, not 3^3 = 27)
As these are known, we can simply render the scale at render time

--- a/webapp/app/views/yardsticks/_summary.html.haml
+++ b/webapp/app/views/yardsticks/_summary.html.haml
@@ -1,5 +1,55 @@
 
 #yardsticks-summary.selection.full-width.left{ :middle => '#edit-yardstick',
                                                :right => '#new-yardstick'}
-  .data.clear-before-show.empty-on-putback 
+  .data
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=1' }
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=2' }
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=3' }
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=4' }
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=5' }
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=6' }
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=7' }
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=8' }
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/red-cross.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=9' }
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/orange-plus.png", :size => "32x32" 
+    .traffic-light
+      %input{ :type => :radio, :url => 'yardstick.json?id=10' }
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/green-check.png", :size => "32x32" 
+      = image_tag "icons/green-check.png", :size => "32x32" 
 
