--- a/webapp/app/views/yardsticks/_summary.html.haml
+++ b/webapp/app/views/yardsticks/_summary.html.haml
@@ -2,6 +2,10 @@
 #yardsticks-summary.selection.full-width.left{ :middle => '#edit-yardstick',
                                                :right => '#new-yardstick'}
   .data
+    #yardsticks-icon-table
+      #insights.label.left= "Insights" 
+      #formulation.label.left= "Formulation"
+      #calculation.label.left= "Calculation" 
     .traffic-light
       %input{ :type => :radio, :url => 'yardstick.json?id=1' }
       = image_tag "icons/red-cross.png", :size => "32x32" 
