--- a/webapp/app/views/admin/_top-panel.html.haml
+++ b/webapp/app/views/admin/_top-panel.html.haml
@@ -2,6 +2,6 @@
 %ul.no-bullets
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", :right => "#new-teacher"}} 
   = main_link :for => :courses, :with => {:panels => {:wide => "#edit-syllabi-megaform"}} 
-  = main_link :for => :yardsticks 
+  = main_link :for => :yardsticks, :with => {:panels => {:middle => '#edit-yardstick'}}
   = main_link :for => :logout, :href => "/logout", :dynamic => false
 
