--- a/webapp/app/views/courses/_summary.html.haml
+++ b/webapp/app/views/courses/_summary.html.haml
@@ -1,3 +1,3 @@
 
-#courses-summary.selection.full-width.left{ :wide => '#edit-syllabi-megaform'}
+#courses-summary.selection.full-width.left
   .data.clear-before-show.empty-on-putback 
