--- a/webapp/app/views/schools/_edit.html.haml
+++ b/webapp/app/views/schools/_edit.html.haml
@@ -1,6 +1,12 @@
 
-#edit-school.update-entity.close-on-submit
+#edit-school
+  %legend
+    %span.target= "Quick Edit"
+    %span.operation= "School"
   = semantic_form_for :school, :remote => true do |f| 
+    .submit-buttons
+      %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
+
     = f.inputs do 
       = f.input :name, :input_html => { :marker => :name } 
       = f.input :street_address, :label => "Address", :input_html => { :marker => :street_address } 
@@ -10,6 +16,3 @@
       = f.input :phone, :label => 'Phone #', :input_html => { :marker => :phone}
       = semantic_fields_for :account do |a| 
         = a.input :active, :as => :boolean, :input_html => { :marker => :active}
-
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
