--- a/webapp/app/views/schools/_new.html.haml
+++ b/webapp/app/views/schools/_new.html.haml
@@ -1,6 +1,12 @@
 
 #new-school.clear-after-submit
+  %legend
+    %span.target= "Quick Add"
+    %span.operation= "School"
   = semantic_form_for :school, :remote => true do |f| 
+    .submit-buttons
+      %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
+
     = f.inputs do 
       = f.input :name 
       = f.input :street_address, :label => "Address" 
@@ -10,6 +16,3 @@
       = f.input :phone, :label => 'Phone #'
       = semantic_fields_for :account do |a| 
         = f.input :email, :hint => "Will be used for logging in"
-
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
