Keep the labels for drop-downs in #edit-syllabi-megaform hidden ..
They used to be hidden. But something in the last couple of commits undid that.
Hence, explicitly handling the labels

--- a/webapp/app/assets/stylesheets/new-interface.css
+++ b/webapp/app/assets/stylesheets/new-interface.css
@@ -118,6 +118,10 @@ fieldset.inputs li.boolean.input {
   list-style-type : none ;
 } 
 
+#edit-syllabi-megaform .dropdown label {
+  display : none ;
+} 
+
 #minor-links label { 
   font-size : 12px ;
   text-align : left ; 
