[stop-gap] : Display radio-button list of sections in #middle-panel
[NeXT] : Load student list for selected section

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -25,6 +25,7 @@
     = render :partial => 'yardsticks/summary'
     = render :partial => 'teachers/list'
     = render :partial => 'study_groups/list'
+    = render :partial => 'study_groups/radio_list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
