--- a/webapp/app/views/schools/_controls.html.haml
+++ b/webapp/app/views/schools/_controls.html.haml
@@ -7,7 +7,8 @@
                  :with => { :panels => { :middle => '#teachers-list', :right => '#studygroups-list'} }
     = minor_link :for => 'new-studygroups', :label => 'New Sections',
                  :with => { :panels => { :middle => '#new-studygroups' } }
-    = minor_link :for => 'edit-studygroups', :label => 'Edit Sections'
+    = minor_link :for => 'edit-studygroups', :label => 'Edit Sections', 
+                 :with => {:panels => {:middle => '#studygroups-radiolist'} }
 
   = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :states
