Student lists should be seen in the context of the section the students belong to..
And hence, the list should be contained inside study_groups/sections

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -24,7 +24,7 @@
     = render :partial => 'syllabi/edit'
     = render :partial => 'yardsticks/summary'
     = render :partial => 'teachers/list'
-    = render :partial => 'students/list'
+    = render :partial => 'study_groups/studentlist'
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
   
