Added ability to assign new students to one of the existing sections ..
The new students have study_group_id = nil.

NeXT : The same #right-panel should also display the list of currently
assigned students and provide some way of unassigning students from a section
The net effect should also dynamically reflect on screen

--- a/webapp/app/views/study_groups/_studentlist.html.haml
+++ b/webapp/app/views/study_groups/_studentlist.html.haml
@@ -3,4 +3,6 @@
   %legend
     %span.target= "Students" 
     %span.operation= "as yet unassigned"
-  .data.empty-on-putback 
+  = form_tag study_groups_update_student_list_path, :remote => true, :method => :put do |f| 
+    = submit_tag "Assign to Selected"
+    .data.empty-on-putback 
