Defined action attribute for all forms in the partials itself ..
Much cleaner than setting the attribute sometime later using functions
like editFormAction() in JS. Editing the action attribute for the specific
object before submit is now part of core-behaviour

Hence, most references to editFormAction() also removed. The one that
remains, I will re-visit later

--- a/webapp/app/views/courses/_new.html.haml
+++ b/webapp/app/views/courses/_new.html.haml
@@ -1,6 +1,6 @@
 
 #new-course.new-entity.close-on-submit
-  = semantic_form_for :course, :remote => true do |f| 
+  = semantic_form_for :course, :remote => true, :url => course_path do |f| 
     = f.inputs do 
       = f.input :name 
       = f.input :board_id, :label => 'Board', :as => :select, 
