--- a/webapp/app/views/schools/_edit.html.haml
+++ b/webapp/app/views/schools/_edit.html.haml
@@ -3,7 +3,7 @@
   %legend
     %span.target= "Quick Edit"
     %span.operation= "School"
-  = semantic_form_for :school, :remote => true do |f| 
+  = semantic_form_for :school, :remote => true, :url => '/school', :method => :put do |f| 
     .submit-buttons
       %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
 
