[Admin] : Added ability to view enrolled students for a section
 #student-list's <legend> now has 2 links - one for showing the (default)
 list of unassigned students and a second for showing students enrolled in the
 selected section

 KPNS : Showing enrolled students depends on the 'marker' attribute on
 #right-panel - which - if a section has not been selected - would be
 for the school that was selected. But this marker is interpreted as
 section and hence will return data for section with id = < school-id >

--- a/webapp/app/assets/stylesheets/new-interface.css
+++ b/webapp/app/assets/stylesheets/new-interface.css
@@ -163,8 +163,14 @@ legend > span.target {
 
 legend > span.operation { 
   text-transform : lowercase ; 
-  font-size : 11px ;
+  font-size : 13px ;
   color : #654b24 ;
+} 
+
+legend > a { 
+  font-size : 13px ; 
+  text-decoration : none ; 
+  margin-right : 8px ;
 } 
 
 .colored, .light-orange, .light-green { 
