[School] : Auto-generate a login using new attribute - tag
the login - of the form principal.#{tag} - intended for use
either by the Principal or any other designation person

--- a/webapp/app/views/schools/_new.html.haml
+++ b/webapp/app/views/schools/_new.html.haml
@@ -9,6 +9,7 @@
 
     = f.inputs do 
       = f.input :name 
+      = f.input :tag
       = f.input :street_address, :label => "Address" 
       = f.input :city
       = f.input :state, :as => :select, :collection => ['DL', 'MH', 'HR','PB','RJ']
