[Admin] Added ability to add other Admin and/or examiners

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -11,6 +11,7 @@
     = render :partial => 'teachers/new'
     = render :partial => 'students/new'
     = render :partial => 'study_groups/new'
+    = render :partial => 'examiners/new'
 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
