Corrected CSS syntax errors ...
Just when you thought that CSS syntax errors didn't matter, it turns
out that they do when doing asset pre-compilation for Rails production. Wow !

--- a/webapp/app/assets/stylesheets/new-interface.css
+++ b/webapp/app/assets/stylesheets/new-interface.css
@@ -90,7 +90,7 @@ fieldset.inputs li.boolean.input {
 #control-panel { 
   padding-top : 20px ;
   height : 100px ;
-  background-color : #654b24 ;*/
+  background-color : #654b24 ;
   /*-moz-border-radius : 4px ;
   border-radius : 4px ; */
 } 
