--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -79,7 +79,7 @@ p {
   padding-bottom : 4px ;*/
 } 
 
-#side-panel li:not(id='login-anchor') {
+#side-panel li:not([id='login-anchor']) {
   margin-bottom : 20px ;
 } 
 
