--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -36,7 +36,7 @@
 
 %html{html_attrs}
   %head 
-    = javascript_include_tag "admin"
+    = javascript_include_tag "application", "admin"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
